--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
  apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "24.0.2"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "xyz.monkeytong.hongbao"
-        minSdkVersion 16
-        targetSdkVersion 22
+        minSdkVersion 19
+        targetSdkVersion 23
         versionCode 4
         versionName "v3.0.1"
         ndk {
