--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Sat Jul 23 18:07:53 CST 2016
-android.useDeprecatedNdk=true
+#android.useDeprecatedNdk=true
